--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@
 DATABASE_URL=
 DIRECT_URL=
 
+NEXT_PUBLIC_SUPABASE_URL="https://__YOUR_SUPABASE_PROJECT__.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
@@ -30,3 +33,8 @@ NEXTAUTH_URL="http://localhost:3000"
 # Google provider
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+# Encript data
+# You can generate a new secret_iv on the command line with:
+# openssl rand -base64 32
+SECRET_IV = 'dadajklasjdalksdjaslk'
