--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tiptap/starter-kit": "2.1.7",
     "@tiptap/suggestion": "2.1.7",
     "@vercel/analytics": "1.0.2",
+    "bcrypt": "5.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "contentlayer": "0.3.4",
@@ -74,6 +75,7 @@
     "@biomejs/biome": "1.0.0",
     "@s-ui/mono": "2.38.0",
     "@tailwindcss/typography": "0.5.9",
+    "@types/bcrypt": "5.0.0",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
