--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.0",
     "@next-auth/prisma-adapter": "1.0.7",
+    "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.2.0",
     "@radix-ui/react-avatar": "1.0.3",
     "@radix-ui/react-label": "2.0.2",
@@ -81,6 +82,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "dotenv-cli": "7.3.0",
+    "encoding": "0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "husky": "8.0.3",
