--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-slot": "1.0.2",
+    "@react-email/components": "0.0.7",
     "@supabase/supabase-js": "2.33.1",
     "@tiptap/core": "2.1.7",
     "@tiptap/extension-color": "2.1.7",
@@ -59,11 +60,13 @@
     "react": "18.2.0",
     "react-day-picker": "8.8.1",
     "react-dom": "18.2.0",
+    "react-email": "1.9.4",
     "react-hook-form": "7.45.4",
     "rehype-autolink-headings": "6.1.1",
     "rehype-pretty-code": "0.10.0",
     "rehype-slug": "5.1.0",
     "remark-gfm": "3.0.1",
+    "resend": "1.0.0",
     "sonner": "0.7.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.6",
