--- a/biome.json
+++ b/biome.json
@@ -14,6 +14,9 @@
       }
     }
   },
+  "organizeImports": {
+    "enabled": true
+  },
   "formatter": {
     "enabled": true,
     "indentSize": 2,
