--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "remark-gfm": "3.0.1",
     "resend": "1.0.0",
     "sonner": "0.7.0",
+    "swr": "2.2.2",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
     "tippy.js": "6.3.7",
