--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   },
   "engines": {
     "node": "18.x",
-    "pnpm": "8.7.1"
+    "pnpm": ">=8.6.5"
   },
-  "packageManager": "pnpm@8.7.1"
+  "packageManager": "pnpm@8.6.10"
 }
