--- a/package.json
+++ b/package.json
@@ -32,38 +32,38 @@
     "@radix-ui/react-slot": "1.0.2",
     "@react-email/components": "0.0.7",
     "@supabase/supabase-js": "2.33.1",
-    "@tiptap/core": "2.1.7",
-    "@tiptap/extension-color": "2.1.7",
-    "@tiptap/extension-highlight": "2.1.7",
-    "@tiptap/extension-horizontal-rule": "2.1.7",
-    "@tiptap/extension-placeholder": "2.1.7",
-    "@tiptap/extension-task-item": "2.1.7",
-    "@tiptap/extension-task-list": "2.1.7",
-    "@tiptap/extension-text-style": "2.1.7",
-    "@tiptap/extension-underline": "2.1.7",
-    "@tiptap/pm": "2.1.7",
-    "@tiptap/react": "2.1.7",
-    "@tiptap/starter-kit": "2.1.7",
-    "@tiptap/suggestion": "2.1.7",
+    "@tiptap/core": "2.1.8",
+    "@tiptap/extension-color": "2.1.8",
+    "@tiptap/extension-highlight": "2.1.8",
+    "@tiptap/extension-horizontal-rule": "2.1.8",
+    "@tiptap/extension-placeholder": "2.1.8",
+    "@tiptap/extension-task-item": "2.1.8",
+    "@tiptap/extension-task-list": "2.1.8",
+    "@tiptap/extension-text-style": "2.1.8",
+    "@tiptap/extension-underline": "2.1.8",
+    "@tiptap/pm": "2.1.8",
+    "@tiptap/react": "2.1.8",
+    "@tiptap/starter-kit": "2.1.8",
+    "@tiptap/suggestion": "2.1.8",
     "@vercel/analytics": "1.0.2",
     "bcrypt": "5.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "contentlayer": "0.3.4",
     "date-fns": "2.30.0",
-    "framer-motion": "10.16.2",
+    "framer-motion": "10.16.4",
     "github-slugger": "2.0.0",
     "lucide-react": "0.274.0",
-    "next": "^13.4.20-canary.15",
+    "next": "13.4.20-canary.18",
     "next-auth": "4.23.1",
     "next-contentlayer": "0.3.4",
     "react": "18.2.0",
     "react-day-picker": "8.8.1",
     "react-dom": "18.2.0",
     "react-email": "1.9.4",
-    "react-hook-form": "7.45.4",
-    "rehype-autolink-headings": "6.1.1",
-    "rehype-pretty-code": "0.10.0",
+    "react-hook-form": "7.46.1",
+    "rehype-autolink-headings": "7.0.0",
+    "rehype-pretty-code": "0.10.1",
     "rehype-slug": "6.0.0",
     "remark-gfm": "3.0.1",
     "resend": "1.0.0",
@@ -77,11 +77,11 @@
     "zod": "3.22.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.0.0",
+    "@biomejs/biome": "1.1.0",
     "@s-ui/mono": "2.38.0",
-    "@tailwindcss/typography": "0.5.9",
+    "@tailwindcss/typography": "0.5.10",
     "@types/bcrypt": "5.0.0",
-    "@types/node": "20.5.7",
+    "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
