--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "framer-motion": "10.16.4",
     "github-slugger": "2.0.0",
     "lucide-react": "0.274.0",
-    "next": "13.4.20-canary.18",
+    "next": "13.4.19",
     "next-auth": "4.23.1",
     "next-contentlayer": "0.3.4",
     "react": "18.2.0",
@@ -67,8 +67,7 @@
     "rehype-slug": "6.0.0",
     "remark-gfm": "3.0.1",
     "resend": "1.0.0",
-    "sonner": "0.7.0",
-    "swr": "2.2.2",
+    "sonner": "0.7.1",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
     "tippy.js": "6.3.7",
@@ -77,8 +76,8 @@
     "zod": "3.22.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.1.0",
-    "@s-ui/mono": "2.38.0",
+    "@biomejs/biome": "1.1.2",
+    "@s-ui/mono": "2.39.0",
     "@tailwindcss/typography": "0.5.10",
     "@types/bcrypt": "5.0.0",
     "@types/node": "20.5.9",
