--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.2.0",
     "@radix-ui/react-avatar": "1.0.3",
+    "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-slot": "1.0.2",
@@ -50,6 +51,7 @@
     "bcrypt": "5.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
+    "cmdk": "0.2.0",
     "contentlayer": "0.3.4",
     "date-fns": "2.30.0",
     "framer-motion": "10.16.4",
