--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,6 +32,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#00575C",
+  "theme_color": "#00cf76",
   "background_color": "#ffffff"
 }
