--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@next-auth/prisma-adapter": "1.0.7",
     "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.3.1",
+    "@radix-ui/react-alert-dialog": "1.0.4",
     "@radix-ui/react-avatar": "1.0.3",
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-dropdown-menu": "2.0.5",
