--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "tippy.js": "6.3.7",
     "tiptap-markdown": "0.8.2",
     "use-debounce": "9.0.4",
+    "vaul": "0.6.7",
     "zod": "3.22.2"
   },
   "devDependencies": {
