--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tiptap/extension-task-list": "2.1.11",
     "@tiptap/extension-text-style": "2.1.11",
     "@tiptap/extension-underline": "2.1.11",
+    "@tiptap/html": "2.1.11",
     "@tiptap/pm": "2.1.11",
     "@tiptap/react": "2.1.11",
     "@tiptap/starter-kit": "2.1.11",
