--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slot": "1.0.2",
     "@react-email/components": "0.0.7",
     "@supabase/supabase-js": "2.38.0",
@@ -54,6 +55,7 @@
     "@vercel/analytics": "1.1.0",
     "bcrypt": "5.1.1",
     "class-variance-authority": "0.7.0",
+    "cloudinary": "1.41.0",
     "clsx": "2.0.0",
     "contentlayer": "0.3.4",
     "date-fns": "2.30.0",
