--- a/.env.example
+++ b/.env.example
@@ -85,8 +85,17 @@ RESEND_API_KEY=
 
 SECRET_IV= 
 
+
 # -------------------
 # Cohere Configuration
 # -------------------
 # Configure Cohere API credentials.
 COHERE_API_KEY=
+
+
+# -------------------
+# Cloudinary Configuration
+# -------------------
+# Required for image uploads
+# Get your Cloudinary URL here: https://cloudinary.com/documentation/node_integration#configuration
+CLOUDINARY_URL=
