--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,8 @@ NEXTAUTH_URL="http://localhost:3000"
 
 LEMON_SQUEEZY_URL=
 LEMON_SQUEEZY_API_KEY=
+LEMON_SQUEEZY_SECRET=
+
 
 
 # -------------------
