--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "next": "13.5.4",
     "next-auth": "4.23.2",
     "next-contentlayer": "0.3.4",
+    "raw-body": "2.5.2",
     "react": "18.2.0",
     "react-day-picker": "8.8.2",
     "react-dom": "18.2.0",
