--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-switch": "1.0.3",
     "@react-email/components": "0.0.7",
     "@supabase/supabase-js": "2.38.2",
     "@tiptap/core": "2.1.12",
@@ -70,6 +71,7 @@
     "react": "18.2.0",
     "react-day-picker": "8.9.1",
     "react-dom": "18.2.0",
+    "react-dom-confetti": "0.2.0",
     "react-email": "1.9.5",
     "react-hook-form": "7.47.0",
     "rehype-autolink-headings": "7.0.0",
