--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "date-fns": "2.30.0",
     "dayjs": "1.11.10",
     "framer-motion": "10.16.4",
+    "geist": "1.0.0",
     "github-slugger": "2.0.0",
     "lucide-react": "0.290.0",
     "next": "14.0.1",
@@ -109,7 +110,7 @@
     "typescript": "5.2.2"
   },
   "engines": {
-    "node": "18.x",
+    "node": "18.x || 20.x",
     "pnpm": ">=8.9.0"
   },
   "packageManager": "pnpm@8.9.0"
