--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.2",
+    "@lemonsqueezy/lemonsqueezy.js": "1.2.1",
     "@next-auth/prisma-adapter": "1.0.7",
     "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.5.2",
