--- a/components.json
+++ b/components.json
@@ -5,12 +5,12 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "styles/globals.css",
+    "css": "@/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true
   },
   "aliases": {
-    "components": "@/components/ui",
+    "components": "@/components/",
     "utils": "@/lib/utils"
   }
 }
