--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tiptap/starter-kit": "2.1.12",
     "@tiptap/suggestion": "2.1.12",
     "@vercel/analytics": "1.1.1",
+    "@vercel/speed-insights": "1.0.2",
     "bcrypt": "5.1.1",
     "class-variance-authority": "0.7.0",
     "cloudinary": "1.41.0",
