--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -32,6 +32,6 @@
       }
     ]
   },
-  "include": ["src/@types/next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".contentlayer/generated"],
+  "include": ["src/types/next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".contentlayer/generated"],
   "exclude": ["node_modules"]
 }
