--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@heroicons/react": "2.1.1",
     "@hookform/resolvers": "3.3.4",
+    "@mindfulyze/tailwind-config": "workspace:*",
+    "@mindfulyze/utils": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
     "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.8.1",
@@ -72,15 +74,12 @@
     "remark-gfm": "4.0.0",
     "resend": "3.0.0",
     "sonner": "1.3.1",
-    "tailwind-merge": "2.2.0",
-    "tailwindcss-animate": "1.0.7",
     "tippy.js": "6.3.7",
     "tiptap-markdown": "0.8.9",
     "use-debounce": "10.0.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "0.5.10",
     "@types/bcrypt": "5.0.2",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
@@ -93,7 +92,8 @@
     "postcss": "8.4.33",
     "prisma": "5.8.1",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "tsconfig": "workspace:*"
   },
   "engines": {
     "node": "18.x || 20.x",
