--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "config": "workspace:*",
     "@mindfulyze/ui": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
+    "@mindfulyze/editor": "workspace:*",
     "@mindfulyze/database": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
     "@paralleldrive/cuid2": "2.2.2",
@@ -28,21 +29,9 @@
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-switch": "1.0.3",
     "@react-email/components": "0.0.14",
-    "@supabase/supabase-js": "2.39.3",
-    "@tiptap/core": "2.1.16",
-    "@tiptap/extension-color": "2.1.16",
-    "@tiptap/extension-highlight": "2.1.16",
-    "@tiptap/extension-horizontal-rule": "2.1.16",
-    "@tiptap/extension-placeholder": "2.1.16",
-    "@tiptap/extension-task-item": "2.1.16",
-    "@tiptap/extension-task-list": "2.1.16",
-    "@tiptap/extension-text-style": "2.1.16",
-    "@tiptap/extension-underline": "2.1.16",
     "@tiptap/html": "2.1.16",
-    "@tiptap/pm": "2.1.16",
     "@tiptap/react": "2.1.16",
-    "@tiptap/starter-kit": "2.1.16",
-    "@tiptap/suggestion": "2.1.16",
+    "@supabase/supabase-js": "2.39.3",
     "@vercel/analytics": "1.1.2",
     "@vercel/speed-insights": "1.0.6",
     "bcrypt": "5.1.1",
