--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,6 +26,7 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
     "tailwindcss": "3.4.1"
