--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "config/tsconfig/react-library.json",
   "compilerOptions": {
     "resolveJsonModule": true,
-    "incremental": false
+    "incremental": false,
+    "baseUrl": ".",
+    "paths": {
+      "@editor/*": ["src/*"]
+    }
   },
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
